cmake_minimum_required(VERSION 3.22)
project(ch1)

set(CMAKE_CXX_STANDARD 11)

add_executable(selection_problem selection_problem.cpp)
add_executable(IntCell IntCell.cpp)
add_executable(squares squares.cpp)
add_executable(IntCellPtr IntCellPtr.cpp)
add_executable(Comparable Comparable.cpp)
add_executable(matrix Matrix.cpp)